--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
 																	<img src="images/resources/comment1.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Lion King</a>
+																	<h5><a href="#" title="">Lion King</a>
 																	</h5>
 																	<p>Microsoft's Xbox Series X is proven to be more
 																		powerful than the PS5. This being said
@@ -889,7 +889,7 @@
 																	<img src="images/resources/comment2.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Randy
+																	<h5><a href="#" title="">Randy
 																			Chege</a>
 																	</h5>
 																	<p>I like the new design on the console 😍
@@ -1046,8 +1046,8 @@
 																<a data-toggle="tooltip" title="Justin" href="#">
 																	<img alt="" src="images/resources/userlist-4.jpg">
 																</a>
-																<span><b>Justin</b> and <a href="#"
-																		title="">27 more</a> liked</span>
+																<span><b>Justin</b> and <a href="#" title="">27 more</a>
+																	liked</span>
 															</div>
 														</div>
 													</div>
@@ -1055,41 +1055,44 @@
 														<ul class="we-comet">
 															<li>
 																<div class="comet-avatar">
-																	<img src="images/resources/nearly3.jpg" alt="">
+																	<img src="images/resources/comment3.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Jason
-																			borne</a></h5>
-																	<p>we are working for the dance and sing songs. this
-																		video is very awesome for the youngster. please
-																		vote this video and like our channel</p>
+																	<h5><a href="#" title="">Green Frankenstein</a></h5>
+																	<p>Most of the games are pretty violent. While
+																		Twitch has milder games such as Minecraft, many
+																		are mature, including Fallout and Call of Duty.
+																	</p>
 																	<div class="inline-itms">
-																		<span>1 year ago</span>
+																		<span>6 hrs ago</span>
 																		<a class="we-reply" href="#" title="Reply"><i
 																				class="fa fa-reply"></i></a>
 																		<a href="#" title=""><i
-																				class="fa fa-heart"></i><span>20</span></a>
+																				class="fa fa-heart"></i><span>7</span></a>
 																	</div>
 																</div>
 
 															</li>
 															<li>
 																<div class="comet-avatar">
-																	<img src="images/resources/comet-4.jpg" alt="">
+																	<img src="images/resources/comment4.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Sophia</a>
+																	<h5><a href="#" title="">Rainbow Smasher</a>
 																	</h5>
-																	<p>we are working for the dance and sing songs. this
-																		video is very awesome for the youngster.
-																		<i class="em em-smiley"></i>
+																	<p>Twitch can be a real time-waster. If you're
+																		concerned about the amount of time your kid
+																		already spends playing video games, you'll want
+																		to rein in the Twitch time, as there's an
+																		endless supply of gamers, information, and other
+																		game-buff stuff.
 																	</p>
 																	<div class="inline-itms">
-																		<span>1 year ago</span>
+																		<span>4 hrs ago</span>
 																		<a class="we-reply" href="#" title="Reply"><i
 																				class="fa fa-reply"></i></a>
 																		<a href="#" title=""><i
-																				class="fa fa-heart"></i><span>20</span></a>
+																				class="fa fa-heart"></i><span>1</span></a>
 																	</div>
 																</div>
 															</li>
