--- a/index.html
+++ b/index.html
@@ -963,7 +963,6 @@
 																	<li><i class="fa fa-address-card-o"></i>Boost This
 																		Post
 																	</li>
-
 																	<li><i class="fa fa-wpexplorer"></i>Select as
 																		featured
 																	</li>
@@ -1051,7 +1050,7 @@
 															</div>
 														</div>
 													</div>
-													<div class="coment-area" style="">
+													<div class="coment-area">
 														<ul class="we-comet">
 															<li>
 																<div class="comet-avatar">
@@ -1152,19 +1151,20 @@
 														<div class="more">
 															<div class="more-post-optns"><i class="ti-more-alt"></i>
 																<ul>
-																	<li><i class="fa fa-pencil-square-o"></i>Edit Post
-																	</li>
-																	<li><i class="fa fa-trash-o"></i>Delete Post</li>
-																	<li class="bad-report"><i
-																			class="fa fa-flag"></i>Report Post</li>
-																	<li><i class="fa fa-address-card-o"></i>Boost This
-																		Post</li>
-																	<li><i class="fa fa-clock-o"></i>Schedule Post</li>
-																	<li><i class="fa fa-wpexplorer"></i>Select as
-																		featured</li>
-																	<li><i class="fa fa-bell-slash-o"></i>Turn off
-																		Notifications</li>
-																</ul>
+																	<ul>
+																		<li><i class="fa fa-address-card-o"></i>Boost This
+																			Post
+																		</li>
+																		<li><i class="fa fa-wpexplorer"></i>Select as
+																			featured
+																		</li>
+																		<li class="bad-report"><i
+																				class="fa fa-flag"></i>Report Post
+																		</li>
+																		<li><i class="fa fa-bell-slash-o"></i>Notifications
+																			Off
+																		</li>
+																	</ul>
 															</div>
 														</div>
 														<ins><a title="" href="time-line.html">Janice Griffith</a></ins>
@@ -1347,18 +1347,18 @@
 														<div class="more">
 															<div class="more-post-optns"><i class="ti-more-alt"></i>
 																<ul>
-																	<li><i class="fa fa-pencil-square-o"></i>Edit Post
-																	</li>
-																	<li><i class="fa fa-trash-o"></i>Delete Post</li>
-																	<li class="bad-report"><i
-																			class="fa fa-flag"></i>Report Post</li>
 																	<li><i class="fa fa-address-card-o"></i>Boost This
-																		Post</li>
-																	<li><i class="fa fa-clock-o"></i>Schedule Post</li>
+																		Post
+																	</li>
 																	<li><i class="fa fa-wpexplorer"></i>Select as
-																		featured</li>
-																	<li><i class="fa fa-bell-slash-o"></i>Turn off
-																		Notifications</li>
+																		featured
+																	</li>
+																	<li class="bad-report"><i
+																			class="fa fa-flag"></i>Report Post
+																	</li>
+																	<li><i class="fa fa-bell-slash-o"></i>Notifications
+																		Off
+																	</li>
 																</ul>
 															</div>
 														</div>
@@ -1532,18 +1532,18 @@
 														<div class="more">
 															<div class="more-post-optns"><i class="ti-more-alt"></i>
 																<ul>
-																	<li><i class="fa fa-pencil-square-o"></i>Edit Post
-																	</li>
-																	<li><i class="fa fa-trash-o"></i>Delete Post</li>
-																	<li class="bad-report"><i
-																			class="fa fa-flag"></i>Report Post</li>
 																	<li><i class="fa fa-address-card-o"></i>Boost This
-																		Post</li>
-																	<li><i class="fa fa-clock-o"></i>Schedule Post</li>
+																		Post
+																	</li>
 																	<li><i class="fa fa-wpexplorer"></i>Select as
-																		featured</li>
-																	<li><i class="fa fa-bell-slash-o"></i>Turn off
-																		Notifications</li>
+																		featured
+																	</li>
+																	<li class="bad-report"><i
+																			class="fa fa-flag"></i>Report Post
+																	</li>
+																	<li><i class="fa fa-bell-slash-o"></i>Notifications
+																		Off
+																	</li>
 																</ul>
 															</div>
 														</div>
@@ -1724,18 +1724,18 @@
 														<div class="more">
 															<div class="more-post-optns"><i class="ti-more-alt"></i>
 																<ul>
-																	<li><i class="fa fa-pencil-square-o"></i>Edit Post
-																	</li>
-																	<li><i class="fa fa-trash-o"></i>Delete Post</li>
-																	<li class="bad-report"><i
-																			class="fa fa-flag"></i>Report Post</li>
 																	<li><i class="fa fa-address-card-o"></i>Boost This
-																		Post</li>
-																	<li><i class="fa fa-clock-o"></i>Schedule Post</li>
+																		Post
+																	</li>
 																	<li><i class="fa fa-wpexplorer"></i>Select as
-																		featured</li>
-																	<li><i class="fa fa-bell-slash-o"></i>Turn off
-																		Notifications</li>
+																		featured
+																	</li>
+																	<li class="bad-report"><i
+																			class="fa fa-flag"></i>Report Post
+																	</li>
+																	<li><i class="fa fa-bell-slash-o"></i>Notifications
+																		Off
+																	</li>
 																</ul>
 															</div>
 														</div>
