recent activity sidebar

--- a/index.html
+++ b/index.html
@@ -565,23 +565,9 @@
 											<ul class="activitiez">
 												<li>
 													<div class="activity-meta">
-														<i>2 Minutes Ago</i>
+														<i>2 Days Ago</i>
 														<span><a href="#" title="">Mention on a post </a></span>
 														<h6>by <a href="time-line.html">PlayBoi Gamer.</a></h6>
-													</div>
-												</li>
-												<li>
-													<div class="activity-meta">
-														<i>A While Ago</i>
-														<span><a href="#" title="">Comment on your photo.</a></span>
-														<h6>"<a href="#">That controller looks awesome</a>"</h6>
-													</div>
-												</li>
-												<li>
-													<div class="activity-meta">
-														<i>A Month Ago</i>
-														<span><a href="#" title="">Posted your status. “Hello guys, how
-																are you?”</a></span>
 													</div>
 												</li>
 											</ul>
