--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 												<span class="status f-online"></span>
 											</figure>
 											<div class="mesg-meta">
-												<h6>Gerald Xbox</h6>
+												<h6>Gerald Mohammed</h6>
 												<span><i class="ti-check"></i> Check out the new game</span>
 												<i>2 min ago</i>
 											</div>
@@ -209,7 +209,7 @@
 											</figure>
 											<div class="mesg-meta">
 												<h6>Arteta Gamer</h6>
-												<span><i class="ti-check"></i> LOgin to your console and get free
+												<span><i class="ti-check"></i> Login to your console and get free
 													virtual coins</span>
 												<i>5 min ago</i>
 											</div>
@@ -272,20 +272,6 @@
 									<li>
 										<a href="notifications.html" title="">
 											<figure>
-												<img src="images/resources/profile7.jpg" alt="">
-												<span class="status f-online"></span>
-											</figure>
-											<div class="mesg-meta">
-												<h6>PlayBoi Gamer</h6>
-												<span>mentioned you in his post</span>
-												<i>2 min ago</i>
-											</div>
-										</a>
-										<span class="tag">New</span>
-									</li>
-									<li>
-										<a href="notifications.html" title="">
-											<figure>
 												<img src="images/resources/profile5.jpg" alt="">
 												<span class="status f-online"></span>
 											</figure>
@@ -304,19 +290,16 @@
 									<li>
 										<a href="notifications.html" title="">
 											<figure>
-												<img src="images/resources/profile4.jpg" alt="">
+												<img src="images/resources/profile7.jpg" alt="">
 												<span class="status f-online"></span>
 											</figure>
 											<div class="mesg-meta">
-												<h6>Justin Kaiga</h6>
-												<span>commented on your photo.</span>
-												<i>Sunday</i>
-												<figure>
-													<span>"That controller looks awesome."</span>
-													<img src="images/resources/post1.jpg" alt="">
-												</figure>
+												<h6>PlayBoi Gamer</h6>
+												<span>mentioned you in his post</span>
+												<i>2 days ago</i>
 											</div>
 										</a>
+										<span class="tag">New</span>
 									</li>
 									<li>
 										<a href="notifications.html" title="">
@@ -338,7 +321,7 @@
 												<span class="status f-online"></span>
 											</figure>
 											<div class="mesg-meta">
-												<h6>Gerald Xbox</h6>
+												<h6>Gerald Mohammed</h6>
 												<span>Andrew Changed his profile picture.</span>
 												<i>jul 18</i>
 											</div>
