--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
 						</form>
 					</div>
 					<ul class="setting-area">
-						<li><a href="#" class="setting-area-home" title="Home" data-ripple=""><i
-									class="fa fa-home"></i></a></li>
 						<li>
 							<a href="" class="setting-area-other" title="Friend Requests" data-ripple="">
 								<i class="fa fa-user"></i><em class="bg-red">5</em>
@@ -176,11 +174,6 @@
 								</ul>
 								<a href="friend-requests.html" title="" class="more-mesg">View All</a>
 							</div>
-						</li>
-						<li>
-							<a href="" class="setting-area-other" title="" data-ripple="">
-								<i class="fa fa-desktop"></i>
-							</a>
 						</li>
 						<li>
 							<a href="#" class="setting-area-other" title="Messages" data-ripple=""><i
@@ -333,8 +326,8 @@
 						</li>
 					</ul>
 					<div class="user-img">
-						<h5>Sociee Guest</h5>
-						<img src="images/resources/admin.jpg" alt="">
+						<!-- <h5>Sociee Guest</h5> -->
+						<img src="images/resources/admin.jpg" alt="" class="ml-5">
 						<span class="status f-online"></span>
 						<div class="user-setting">
 							<ul class="log-out">
