--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
 	<div class="se-pre-con"></div>
 	<div class="theme-layout">
 
-		<div class="postoverlay"></div>
-
 		<div class="responsive-header">
 			<div class="mh-head first Sticky">
 				<span class="mh-btns-left">
 					<a class="" href="#menu"><i class="fa fa-align-justify"></i></a>
 				</span>
 				<span class="mh-text">
-					<a href="newsfeed.html" title=""><img src="images/logo.png" alt=""></a>
+					<a href="#" title=""><img src="images/logo.png" alt=""></a>
 				</span>
 			</div>
 			<div class="mh-head second">
