--- a/index.html
+++ b/index.html
@@ -1834,22 +1834,22 @@
 											</div>
 										</div><!-- map location post -->
 									</div>
-								</div><!-- centerl meta -->
+								</div><!-- center meta -->
 								<div class="col-lg-3">
 									<aside class="sidebar static right">
 										<div class="widget">
 											<h4 class="widget-title">Your page</h4>
 											<div class="your-page">
 												<figure>
-													<a href="#" title=""><img src="images/resources/friend-avatar9.jpg"
+													<a href="#" title=""><img src="images/resources/admin.jpg"
 															alt=""></a>
 												</figure>
 												<div class="page-meta">
-													<a href="#" title="" class="underline">My Creative Page</a>
-													<span><i class="ti-comment"></i><a href="insight.html"
-															title="">Messages <em>9</em></a></span>
-													<span><i class="ti-bell"></i><a href="insight.html"
-															title="">Notifications <em>2</em></a></span>
+													<a href="#" title="" class="underline">My Sociee</a>
+													<span><i class="ti-comment"></i><a href="#"
+															title="">Messages <em>7</em></a></span>
+													<span><i class="ti-bell"></i><a href="#"
+															title="">Notifications <em>9</em></a></span>
 												</div>
 												<ul class="page-publishes">
 													<li>
@@ -1859,7 +1859,7 @@
 														<span><i class="ti-camera"></i>Photo</span>
 													</li>
 													<li>
-														<span><i class="ti-video-camera"></i>Live</span>
+														<span><i class="ti-video-camera"></i>Video</span>
 													</li>
 													<li>
 														<span><i class="fa fa-user-plus"></i>Invite</span>
@@ -1875,8 +1875,8 @@
 													<!-- Tab panes -->
 													<div class="tab-content">
 														<div class="tab-pane active fade show " id="link1">
-															<span><i class="ti-heart"></i>884</span>
-															<a href="#" title="weekly-likes">35 new likes this week</a>
+															<span><i class="ti-heart"></i>754</span>
+															<a href="#" title="weekly-likes">48 new likes this week</a>
 															<div class="users-thumb-list">
 																<a href="#" title="Anderw" data-toggle="tooltip">
 																	<img src="images/resources/userlist-1.jpg" alt="">
@@ -1902,29 +1902,29 @@
 															</div>
 														</div>
 														<div class="tab-pane fade" id="link2">
-															<span><i class="fa fa-eye"></i>440</span>
-															<a href="#" title="weekly-likes">440 new views this week</a>
+															<span><i class="fa fa-eye"></i>347</span>
+															<a href="#" title="weekly-likes">347 new views this week</a>
 															<div class="users-thumb-list">
 																<a href="#" title="Anderw" data-toggle="tooltip">
-																	<img src="images/resources/userlist-1.jpg" alt="">
+																	<img src="images/resources/userlist-7.jpg" alt="">
 																</a>
 																<a href="#" title="frank" data-toggle="tooltip">
-																	<img src="images/resources/userlist-2.jpg" alt="">
+																	<img src="images/resources/userlist-6.jpg" alt="">
 																</a>
 																<a href="#" title="Sara" data-toggle="tooltip">
-																	<img src="images/resources/userlist-3.jpg" alt="">
+																	<img src="images/resources/userlist-5.jpg" alt="">
 																</a>
 																<a href="#" title="Amy" data-toggle="tooltip">
 																	<img src="images/resources/userlist-4.jpg" alt="">
 																</a>
 																<a href="#" title="Ema" data-toggle="tooltip">
-																	<img src="images/resources/userlist-5.jpg" alt="">
+																	<img src="images/resources/userlist-3.jpg" alt="">
 																</a>
 																<a href="#" title="Sophie" data-toggle="tooltip">
-																	<img src="images/resources/userlist-6.jpg" alt="">
+																	<img src="images/resources/userlist-2.jpg" alt="">
 																</a>
 																<a href="#" title="Maria" data-toggle="tooltip">
-																	<img src="images/resources/userlist-7.jpg" alt="">
+																	<img src="images/resources/userlist-1.jpg" alt="">
 																</a>
 															</div>
 														</div>
