--- a/index.html
+++ b/index.html
@@ -1936,14 +1936,15 @@
 											<h4 class="widget-title">Explor Events <a title="" href="#"
 													class="see-all">See All</a></h4>
 											<div class="rec-events bg-purple">
-												<i class="ti-gift"></i>
-												<h6><a href="" title="">Ocean Motel good night event in columbia</a>
+												<i class="ti-headphone-alt"></i>
+												<h6>
+													<a href="" title="">Game Streams</a>
 												</h6>
 												<img src="images/clock.png" alt="">
 											</div>
-											<div class="rec-events bg-blue">
+											<div class="rec-events bg-yellow">
 												<i class="ti-microphone"></i>
-												<h6><a href="" title="">2016 The 3rd International Conference</a></h6>
+												<h6><a href="" title="">Gaming Conferences</a></h6>
 												<img src="images/clock.png" alt="">
 											</div>
 										</div><!-- explore events -->
