short profile widget

--- a/index.html
+++ b/index.html
@@ -1953,16 +1953,11 @@
 											<ul class="short-profile">
 												<li>
 													<span>about</span>
-													<p>Hi, i am jhon kates, i am 32 years old and worked as a web
-														developer in microsoft </p>
+													<p>Nothing to see here!</p>
 												</li>
 												<li>
-													<span>fav tv show</span>
-													<p>Sacred Games, Spartcus Blood, Games of Theron </p>
-												</li>
-												<li>
-													<span>favourit music</span>
-													<p>Justin Biber, Shakira, Nati Natasah</p>
+													<span>fav games</span>
+													<p>Call of Duty, Overwatch, Fortnite</p>
 												</li>
 											</ul>
 										</div><!-- profile intro widget -->
