recent links widget

--- a/index.html
+++ b/index.html
@@ -1966,29 +1966,27 @@
 													class="see-all">See All</a></h4>
 											<ul class="recent-links">
 												<li>
-													<figure><img src="images/resources/recentlink-1.jpg" alt="">
+													<figure><img class="rounded" src="images/resources/recentlink-1.jpg" alt="">
 													</figure>
 													<div class="re-links-meta">
-														<h6><a href="#" title="">moira's fade reaches much farther than
-																you think.</a></h6>
+														<h6><a href="https://www.youtube.com/watch?v=9_i57_Db6JE" title="">Fortnite Chapter 2 - Victory Royale</a></h6>
+														<span>1 day before</span>
+													</div>
+												</li>
+												<li>
+													<figure><img class="rounded" src="images/resources/recentlink-2.jpg" alt="">
+													</figure>
+													<div class="re-links-meta">
+														<h6><a href="https://www.youtube.com/watch?v=kEye6-jGwhk" title="">8 MAN vs SQUADS | PUBG</a></h6>
 														<span>2 weeks ago </span>
 													</div>
 												</li>
 												<li>
-													<figure><img src="images/resources/recentlink-2.jpg" alt="">
+													<figure><img class="rounded" src="images/resources/recentlink-3.jpg" alt="">
 													</figure>
 													<div class="re-links-meta">
-														<h6><a href="#" title="">daniel asks if we want him to do the
-																voice of doomfist</a></h6>
+														<h6><a href="https://www.youtube.com/watch?v=LKF3Qy21W1g" title="">Razer Raptor Gaming Monitor</a></h6>
 														<span>3 months ago </span>
-													</div>
-												</li>
-												<li>
-													<figure><img src="images/resources/recentlink-3.jpg" alt="">
-													</figure>
-													<div class="re-links-meta">
-														<h6><a href="#" title="">the pitnik overwatch scandals.</a></h6>
-														<span>1 day before</span>
 													</div>
 												</li>
 											</ul>
