learn more link

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 															</ul>
 														</figure>
 														<div class="description">
-															<a href="#" class="learnmore" data-ripple="">Learn More</a>
+															<a href="https://www.twitch.tv/" class="learnmore" data-ripple="">Learn More</a>
 															<p>
 																Twitch is the world's leading live streaming platform
 																for gamers and the things we love. Watch and chat now
