--- a/index.html
+++ b/index.html
@@ -1961,6 +1961,13 @@
 												</li>
 											</ul>
 										</div><!-- profile intro widget -->
+										<div class="advertisment-box">
+											<h4 class="">advertisment</h4>
+											<figure>
+												<a href="#" title="Advertisment"><img
+														src="images/resources/ad-widget.jpg" alt=""></a>
+											</figure>
+										</div><!-- advertisment box -->
 										<div class="widget stick-widget">
 											<h4 class="widget-title">Recent Links <a title="" href="#"
 													class="see-all">See All</a></h4>
