--- a/index.html
+++ b/index.html
@@ -933,7 +933,8 @@
 															</ul>
 														</figure>
 														<div class="description">
-															<a href="https://www.twitch.tv/" class="learnmore" data-ripple="">Learn More</a>
+															<a href="https://www.twitch.tv/" class="learnmore"
+																data-ripple="">Learn More</a>
 															<p>
 																Twitch is the world's leading live streaming platform
 																for gamers and the things we love. Watch and chat now
@@ -1746,7 +1747,8 @@
 																	<img src="images/resources/comment9.jpg" alt="">
 																</div>
 																<div class="we-comment">
-																	<h5><a href="time-line.html" title="">Fred Shukri</a></h5>
+																	<h5><a href="time-line.html" title="">Fred
+																			Shukri</a></h5>
 																	<p>n a petition tabled in the House by Karen MCA
 																		David Mberia, the 403 traders want the MCAs to
 																		intervene to ensure the Eastleigh market is
@@ -1839,10 +1841,10 @@
 												</figure>
 												<div class="page-meta">
 													<a href="#" title="" class="underline">My Sociee</a>
-													<span><i class="ti-comment"></i><a href="#"
-															title="">Messages <em>7</em></a></span>
-													<span><i class="ti-bell"></i><a href="#"
-															title="">Notifications <em>9</em></a></span>
+													<span><i class="ti-comment"></i><a href="#" title="">Messages
+															<em>7</em></a></span>
+													<span><i class="ti-bell"></i><a href="#" title="">Notifications
+															<em>9</em></a></span>
 												</div>
 												<ul class="page-publishes">
 													<li>
@@ -1966,26 +1968,32 @@
 													class="see-all">See All</a></h4>
 											<ul class="recent-links">
 												<li>
-													<figure><img class="rounded" src="images/resources/recentlink-1.jpg" alt="">
+													<figure><img class="rounded" src="images/resources/recentlink-1.jpg"
+															alt="">
 													</figure>
 													<div class="re-links-meta">
-														<h6><a href="https://www.youtube.com/watch?v=9_i57_Db6JE" title="">Fortnite Chapter 2 - Victory Royale</a></h6>
+														<h6><a href="https://www.youtube.com/watch?v=9_i57_Db6JE"
+																title="">Fortnite Chapter 2 - Victory Royale</a></h6>
 														<span>1 day before</span>
 													</div>
 												</li>
 												<li>
-													<figure><img class="rounded" src="images/resources/recentlink-2.jpg" alt="">
+													<figure><img class="rounded" src="images/resources/recentlink-2.jpg"
+															alt="">
 													</figure>
 													<div class="re-links-meta">
-														<h6><a href="https://www.youtube.com/watch?v=kEye6-jGwhk" title="">8 MAN vs SQUADS | PUBG</a></h6>
+														<h6><a href="https://www.youtube.com/watch?v=kEye6-jGwhk"
+																title="">8 MAN vs SQUADS | PUBG</a></h6>
 														<span>2 weeks ago </span>
 													</div>
 												</li>
 												<li>
-													<figure><img class="rounded" src="images/resources/recentlink-3.jpg" alt="">
+													<figure><img class="rounded" src="images/resources/recentlink-3.jpg"
+															alt="">
 													</figure>
 													<div class="re-links-meta">
-														<h6><a href="https://www.youtube.com/watch?v=LKF3Qy21W1g" title="">Razer Raptor Gaming Monitor</a></h6>
+														<h6><a href="https://www.youtube.com/watch?v=LKF3Qy21W1g"
+																title="">Razer Raptor Gaming Monitor</a></h6>
 														<span>3 months ago </span>
 													</div>
 												</li>
@@ -2004,7 +2012,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<span class="copyright">© Pitnik 2020. All rights reserved.</span>
+						<span class="copyright">© Sociee
+							<script type="text/javascript">document.write(new Date().getFullYear());</script>. All
+							rights reserved.</span>
 						<i><img src="images/credit-cards.png" alt=""></i>
 					</div>
 				</div>
